# RvADS

./: README.md  WORKSPACE
adsv/ads_libs/apollo/map/parser/: BUILD.bazel  __init__.py  parser.py
adsv/geometry/: BUILD.bazel  __init__.py  common.py
adsv/geometry/element/: line_segment.py  point.py  polyline.py  radian.py  region_polyline.py
adsv/geometry/feature/: bound_box.py  reference_line.py  region_item.py  region_reference_line.py
adsv/geometry/proto/: geometry.proto
adsv/geometry/structure/: kdtree.py
adsv/geometry/test/: BUILD.bazel  proto_test.py
adsv/map_manager/: BUILD.bazel  __init__.py  common.py  map_info_loader.py
adsv/monitor/: BUILD.bazel  __init__.py  monitor.py  property.py
adsv/scenario_generator/junction_scenario_generator/: BUILD.bazel  __init__.py  junction_scenario_generator.py
adsv/scenario_generator/scenario_pattern/: BUILD.bazel  __init__.py  junction.py
adsv/scenario_generator/scenario_pattern/proto/: scenario_pattern.proto
adsv/semantic_model/common/map_common/: BUILD.bazel  __init__.py  common.py
adsv/semantic_model/common/map_common/proto/: map_common.proto
adsv/semantic_model/lane_map/: BUILD.bazel  __init__.py  lane_map.py
adsv/semantic_model/lane_map/adapter/: BUILD.bazel  __init__.py  apollo_map_adapter.py  lane_cluster.py  lanes_adapter.py
adsv/semantic_model/lane_map/element/: lane.py  section.py
adsv/semantic_model/lane_map/proto/: lane_map.proto
adsv/semantic_model/lane_map/test/: BUILD.bazel  proto_test.py
adsv/semantic_model/lane_map/tools/: BUILD.bazel  visualizer.py
adsv/semantic_model/metric_graph/: BUILD.bazel  __init__.py  metric_graph.py
adsv/semantic_model/metric_graph/adapter/: BUILD.bazel  __init__.py  lane_map_adapter.py  node_edge_adapter.py
adsv/semantic_model/metric_graph/element/: edge.py  junction.py  node.py  road.py
adsv/semantic_model/metric_graph/proto/: metric_graph.proto
adsv/semantic_model/metric_graph/test/: BUILD.bazel  proto_test.py
adsv/semantic_model/metric_graph/tools/: BUILD.bazel  visualizer.py
adsv/semantic_model/scenario/: BUILD.bazel  __init__.py  scenario.py
adsv/semantic_model/scenario/element/: dynamic_scenario.py  traffic_light.py  vehicle.py
adsv/semantic_model/scenario/proto/: scenario.proto
adsv/semantic_model/scenario/test/: BUILD.bazel  proto_test.py
adsv/semantic_model/scenario/tools/: BUILD.bazel  scene_visualizer.py
adsv/semantic_model/scenario_configuration/: BUILD.bazel  __init__.py  scenario_configuration.py
adsv/semantic_model/scenario_configuration/applier/: BUILD.bazel  __init__.py
adsv/semantic_model/scenario_configuration/applier/lgsvl/: __init__.py  applier.py
adsv/semantic_model/scenario_configuration/applier/lgsvl_apollo/: __init__.py  applier.py
adsv/semantic_model/scenario_configuration/applier/test/: BUILD.bazel  lgsvl_applier_test.py
adsv/semantic_model/scenario_configuration/proto/: scenario_configuration.proto
adsv/semantic_model/static_scene/: BUILD.bazel  __init__.py  static_scene.py
adsv/semantic_model/static_scene/adapter/: BUILD.bazel  apollo_map_adapter.py
adsv/semantic_model/static_scene/element/: signal.py
adsv/semantic_model/static_scene/proto/: static_scene.proto
adsv/semantic_model/static_scene/test/: BUILD.bazel  proto_test.py
adsv/tm2cl/ast/: BUILD.bazel  __init__.py  arithmetic.py  common.py  internal_node.py  logic.py  quantifier.py  temporal.py
adsv/tm2cl/ast/traffic/: function.py  junction.py  object.py  position.py  position_relation.py  road.py  signal.py  vehicle.py
adsv/tm2cl/automata/: BUILD.bazel  automata.py  parser.py
adsv/tm2cl/tactic/: BUILD.bazel  __init__.py  add_multi_operator.py  arithmetic_calculation.py  common.py  convert_to_automata.py  quantifier_expansion.py  record_evaluation.py  scenario_evaluation.py  static_scene_evaluation.py  tautology_elimination.py
adsv/tools/apollo_map_handler/: BUILD.bazel  apollo_map_handler.py
adsv/tools/scenario_info/: BUILD.bazel  print_scenario.py  scenario_summary.py  show_metric_graph.py
adsv/utils/: BUILD.bazel  __init__.py  utils.py
adsv/utils/sequence_solver/: BUILD.bazel  __init__.py  sequence_solver.py  sequence_solver_test.py
data/apollo_map/: BUILD.bazel
data/map/: BUILD.bazel
experimental_results/: README.md
experimental_results/4-way-stop/: scenario_d_2,d_1,d_1,d_1_0.01,0.01,0.01,0.01_0,0,0,0_r=1_info.txt  scenario_d_2,d_1,d_1,d_1_0.01,0.01,0.01,0.01_0,0,0,0_r=1_verdict.txt  scenario_d_2,d_1,d_1,d_1_0.01,0.01,0.01,0.01_0,0,0,0_r=2_info.txt  scenario_d_2,d_1,d_1,d_1_0.01,0.01,0.01,0.01_0,0,0,0_r=2_verdict.txt  scenario_d_2,d_1,d_1,d_1_0.01,0.01,0.01,0.01_0,0,0,0_r=3_verdict.txt  scenario_d_2,d_1,d_1,d_1_0.3,0.3,0.3,0.3_0,0,0,0_r=0_verdict.txt  scenario_d_2,d_1,d_1,d_1_0.3,0.3,0.3,0.3_0,0,0,0_r=1_verdict.txt  scenario_d_2,d_1,d_1,d_1_0.3,0.3,20,20_0,0,0,0_r=0_verdict.txt  scenario_d_2,d_1,d_1,d_1_0.3,0.3,20,20_0,0,0,0_r=1_info.txt  scenario_d_2,d_1,d_1,d_1_0.3,0.3,20,20_0,0,0,0_r=2_info.txt  scenario_d_2,d_1,d_1,d_1_0.3,0.3,20,20_0,0,0,0_r=2_verdict.txt  scenario_d_2,d_1,d_1,d_1_0.3,0.3,20,20_0,0,0,0_r=3_info.txt  scenario_d_2,d_1,d_1,d_1_20,20,20,20_0,0,0,0_r=1_info.txt  scenario_d_2,d_1,d_1,d_1_20,20,20,20_0,0,0,0_r=2_info.txt  scenario_d_2,d_1,d_1,d_1_20,20,20,20_0,0,0,0_r=2_verdict.txt  scenario_d_2,d_1,d_1,d_1_20,20,20,20_0,0,0,0_r=3_info.txt  scenario_d_2,d_1,d_1,d_1_20,20,20,20_0,0,0,0_r=3_verdict.txt  scenario_d_2,d_1,d_1,d_1_20,20,20,20_10,10,10,10_r=0_verdict.txt  scenario_d_2,d_1,d_1,d_1_20,20,20,20_10,10,10,10_r=3_info.txt  scenario_d_2,d_1,d_1,d_1_20,20,20,20_10,10,10,10_r=3_verdict.txt  scenario_d_3,d_1,d_1,d_1_0.01,0.01,0.01,0.01_0,0,0,0_r=0_info.txt  scenario_d_3,d_1,d_1,d_1_0.01,0.01,0.01,0.01_0,0,0,0_r=0_verdict.txt  scenario_d_3,d_1,d_1,d_1_0.01,0.01,0.01,0.01_0,0,0,0_r=2_info.txt  scenario_d_3,d_1,d_1,d_1_0.01,0.01,0.01,0.01_0,0,0,0_r=2_verdict.txt  scenario_d_3,d_1,d_1,d_1_0.01,0.01,0.01,0.01_0,0,0,0_r=3_verdict.txt  scenario_d_3,d_1,d_1,d_1_0.3,0.3,0.3,0.3_0,0,0,0_r=0_info.txt  (+22 more)
experiments/: README.md
scripts/: gen_map_data.sh
validation/: BUILD.bazel  check.py  generate.py
(+873 files in other folders)
