py_library(
    name = "monitor_lib",
    srcs = [
        "monitor.py",
        "property.py",
    ],
    deps = [
        "//adsv/semantic_model/scenario",
        "//adsv/tm2cl/ast",
        "//adsv/tm2cl/ast:internal_node",
    ],
)

py_library(
    name = "monitor",
    srcs = ["__init__.py"],
    visibility = ["//visibility:public"],
    deps = [":monitor_lib"],
)
