load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")

py_proto_library(
    name = "scenario_pattern_py_pb2",
    srcs = ["proto/scenario_pattern.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//adsv/semantic_model/metric_graph:metric_graph_py_pb2",
    ],
)

py_library(
    name = "scenario_pattern_lib",
    srcs = ["junction.py"],
    deps = [
        ":scenario_pattern_py_pb2",
        "//adsv/map_manager",
        "//adsv/semantic_model/metric_graph",
        "//adsv/utils/types",
    ],
)

py_library(
    name = "scenario_pattern",
    srcs = ["__init__.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":scenario_pattern_lib",
        ":scenario_pattern_py_pb2",
    ],
)
