load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")

py_proto_library(
    name = "lane_map_py_pb2",
    srcs = ["proto/lane_map.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//adsv/geometry:geometry_py_pb2",
        "//adsv/semantic_model/common/map_common:map_common_py_pb2",
    ],
)

py_library(
    name = "element",
    srcs = glob(["element/*.py"]),
    deps = [
        ":lane_map_py_pb2",
        "//adsv/geometry",
        "//adsv/semantic_model/common/map_common:common",
        "//adsv/utils",
        "//adsv/utils/types",
    ],
)

py_library(
    name = "lane_map_lib",
    srcs = ["lane_map.py"],
    deps = [
        ":element",
        ":lane_map_py_pb2",
        "//adsv/geometry",
        "//adsv/semantic_model/common/map_common:common",
        "//adsv/utils/types",
    ],
)

py_library(
    name = "lane_map",
    srcs = ["__init__.py"],
    visibility = ["//visibility:public"],
    deps = [":lane_map_lib"],
)
