py_library(
    name = "ast_lib",
    srcs = glob([
        "arithmetic.py",
        "common.py",
        "logic.py",
        "quantifier.py",
        "temporal.py",
        "traffic/*.py",
    ]),
    deps = [
        "//adsv/semantic_model/scenario",
        "//adsv/utils/types",
    ],
)

py_library(
    name = "internal_node",
    srcs = ["internal_node.py"],
    visibility = ["//visibility:public"],
    deps = [":ast_lib"],
)

py_library(
    name = "ast",
    srcs = ["__init__.py"],
    visibility = ["//visibility:public"],
    deps = [":ast_lib"],
)
