py_library(
    name = "sequence_solver",
    srcs = ["__init__.py"],
    visibility = ["//visibility:public"],
    deps = [":sequence_solver_lib"],
)

py_library(
    name = "sequence_solver_lib",
    srcs = ["sequence_solver.py"],
    deps = ["//adsv/utils/types"],
)

py_test(
    name = "sequence_solver_test",
    srcs = ["sequence_solver_test.py"],
    deps = [
        "//adsv/utils/sequence_solver",
    ],
)
